[package]
name = "relaynx"
version = "0.1.0"
edition = "2021"

[dependencies]
# Starknet
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.3", default-features = false, features = [
  "abigen-rs",
] }
starknet = "0.12.0"

# Database
mongodb = { version = "3.0", default-features = false, features = [
  "rustls-tls",
  "compat-3-0-0",
] }

# Misc
eyre = "0.6.12"
dotenvy = "0.15.7"
tokio = { version = "1.40.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde = { version = "1.0.210", features = ["derive"] }

